2006-10-27  David Trowbridge  <trowbrds@gmail.com>

	* configure.ac:
	  - Bump to C99 on this branch too.

2006-10-27  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/pixmaps.c:
	* src/fe-gnome/pixmaps.h:
	* src/fe-gnome/userlist.c:
	* data/Makefile.am:
	D data/purple.png:
	D data/red.png:
	  - No more owner/founder icons, since very few IRC servers use this
	    anymore.

2006-10-27  David Trowbridge  <trowbrds@gmail.com>

	D po/nl.po:
	* po/LINGUAS:
	  - Remove broken translation upon request from gnome-nl.

2006-10-27  David Trowbridge  <trowbrds@gmail.com>

	* data/icons/hicolor/22x22/apps/xchat-gnome-message-nickname-said.png:
	A data/icons/hicolor/22x22/apps/xchat-gnome-status-halfop.svg:
	A data/icons/hicolor/22x22/apps/xchat-gnome-message-new.svg:
	A data/icons/hicolor/22x22/apps/xchat-gnome-status-operator.svg:
	A data/icons/hicolor/22x22/apps/xchat-gnome-message-nickname-said.svg:
	* data/icons/hicolor/16x16/apps/xchat-gnome-message-nickname-said.png:
	A data/icons/hicolor/16x16/apps/xchat-gnome-status-halfop.svg:
	A data/icons/hicolor/16x16/apps/xchat-gnome-message-new.svg:
	A data/icons/hicolor/16x16/apps/xchat-gnome-status-operator.svg:
	A data/icons/hicolor/16x16/apps/xchat-gnome-message-nickname-said.svg:
	  - Even awesomer nickname-said icon.  Also include source artwork.

2006-10-27  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/find-bar.c:
	D data/wrap.png:
	* data/Makefile.am:
	A data/icons/hicolor/16x16/apps/xchat-gnome-search-wrapped.png:
	* data/icons/hicolor/16x16/apps/Makefile.am:
	  - Move wrap into the icon theme, why not.

2006-10-26  David Trowbridge  <trowbrds@gmail.com>

	* src/fe-gnome/about.c:
	  - Add credits for Andreas & Lapo.  Whoo!

2006-10-26  David Trowbridge  <trowbrds@gmail.com>

	* plugins/notification/notification.c:
	* plugins/notify-osd/notify-osd.c:
	* src/fe-gnome/pixmaps.c:
	* src/fe-gnome/navigation-tree.c:
	* configure.ac:
	D data/op.png:
	D data/global-message.png:
	D data/newdata.png: